<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solar You</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Mercury</string>
    <string name="title_section3">Venus</string>
    <string name="title_section4">Earth</string>
    <string name="title_section5">Mars</string>
    <string name="title_section6">Jupiter</string>
    <string name="title_section7">Saturn</string>
    <string name="title_section8">Uranus</string>
    <string name="title_section9">Neptune</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="Mercury">Mercury</string>
    <string name="Venus">Venus</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="earth">Earth</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >HOME</item>
        <item >Mercury</item>
        <item >Venus</item>
        <item >Earth</item>
        <item >Mars</item>
        <item >Jupiter</item>
        <item >Saturn</item>
        <item >Uranus</item>
        <item >Neptune</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/btn_home</item>
        <item>@drawable/mercury</item>
        <item>@drawable/venus</item>
        <item>@drawable/earth</item>
        <item>@drawable/mars</item>
        <item>@drawable/jupiter</item>
        <item>@drawable/saturn</item>
        <item>@drawable/uranus</item>
        <item>@drawable/neptune</item>
    </array>
</resources>
